Added signalmapper to update. Semi-completed functions: add and update.

--- a/src/question_editor/question_editor.ui
+++ b/src/question_editor/question_editor.ui
@@ -383,6 +383,9 @@
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
+              <property name="maximum">
+               <number>10</number>
+              </property>
              </widget>
             </item>
             <item row="1" column="0">
