--- a/src/client/elims.ui
+++ b/src/client/elims.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>m_elims_dlg</class>
- <widget class="QDialog" name="m_elims_dlg">
+ <class>elims_dlg</class>
+ <widget class="QDialog" name="elims_dlg">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -170,16 +170,16 @@
    <item row="5" column="0" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QPushButton" name="next_btn">
+      <widget class="QPushButton" name="prev_btn">
        <property name="text">
-        <string>Next</string>
+        <string>Previous</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="prev_btn">
+      <widget class="QPushButton" name="next_btn">
        <property name="text">
-        <string>Previous</string>
+        <string>Next</string>
        </property>
       </widget>
      </item>
