Created more files for Registration_App
- edited CMakeLists.txt for registration-app
- created registration-app.h and .cpp, placed basic methods and variables

--- a/src/registration_app/team_view.ui
+++ b/src/registration_app/team_view.ui
@@ -63,7 +63,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="back_to_edit">
    <property name="geometry">
     <rect>
      <x>160</x>
