--- a/src/registration_app/add_team.ui
+++ b/src/registration_app/add_team.ui
@@ -48,7 +48,7 @@
       <widget class="QLineEdit" name="teamname_2"/>
      </item>
      <item row="3" column="1">
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="add_team">
        <property name="text">
         <string>Add Team</string>
        </property>
@@ -66,16 +66,6 @@
      </rect>
     </property>
    </widget>
-  </widget>
-  <widget class="QMenuBar" name="menuBar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>311</width>
-     <height>22</height>
-    </rect>
-   </property>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
