--- a/src/config_editor/server_editor.ui
+++ b/src/config_editor/server_editor.ui
@@ -107,6 +107,16 @@
       </layout>
      </widget>
     </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="error">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
