--- a/src/registration_app/team_view.ui
+++ b/src/registration_app/team_view.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>team_view_wnd</class>
+ <widget class="QDialog" name="team_view_wnd">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -63,7 +63,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="back_to_edit">
+  <widget class="QPushButton" name="back_to_edit_btn">
    <property name="geometry">
     <rect>
      <x>160</x>
