--- a/src/registration_app/add_team.ui
+++ b/src/registration_app/add_team.ui
@@ -45,7 +45,7 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QLineEdit" name="teamname_2"/>
+      <widget class="QLineEdit" name="teamschool"/>
      </item>
      <item row="3" column="1">
       <widget class="QPushButton" name="add_team_btn">
