--- a/src/question_editor/question_editor.ui
+++ b/src/question_editor/question_editor.ui
@@ -1274,7 +1274,9 @@
      <string>File</string>
     </property>
     <addaction name="act_load_xml"/>
+    <addaction name="separator"/>
     <addaction name="act_save_xml"/>
+    <addaction name="actionSave_As"/>
     <addaction name="separator"/>
     <addaction name="act_exit"/>
    </widget>
@@ -1291,17 +1293,22 @@
   <widget class="QStatusBar" name="statusBar"/>
   <action name="act_load_xml">
    <property name="text">
-    <string>Import xml</string>
+    <string>Open</string>
    </property>
   </action>
   <action name="act_save_xml">
    <property name="text">
-    <string>Export Xml</string>
+    <string>Save</string>
    </property>
   </action>
   <action name="act_exit">
    <property name="text">
     <string>Exit</string>
+   </property>
+  </action>
+  <action name="actionSave_As">
+   <property name="text">
+    <string>Save As...</string>
    </property>
   </action>
  </widget>
